...
    <string name="about">About</string>
    <string name="choose_site">choose site</string>
    <string name="add_site">Add site</string>
    <string name="street">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code (5 digits) :</string>
    <string name="create_site">Create site</string>
    <string name="site_info">Site info</string>
    <string name="modify_site">Edit site</string>
    <string name="modify_auditor">Edit auditor</string>
    <string name="create_auditor">Create auditor</string>
    <string name="name">Name :</string>
    <string name="last_name">Last name :</string>
    <string name="email" translatable="false">Email :</string>
    <string name="inform_me">Inform me of audits carried out</string>
    <string name="add_auditor">Add auditor</string>
    <string name="auditor">Auditor</string>
    <string name="rulesetInDroplistFormat" translatable="false">%s (V%d)</string>
    <string name="rulesetInDroplist_content_desc_downloaded">downloaded</string>
    <string name="rulesetInDroplist_content_desc_not_downloaded">to download</string>
    <string name="name_of_ref">Name of referential</string>
    <string name="type_of_ref">Referential type</string>
...
    <!--Create audit screen-->
    <string name="enter_audit_name">Audit Name</string>
    <string name="enter_site_name">Audit site</string>
    <string name="audit_referential">Referential Type</string>
    <string name="enter_auditor_name">Auditor name</string>
    <string name="referential_warring">This referential type needs to be downloaded.</string>
    <string name="download">Download</string>
    <string name="download_ref_dialog_title">Download Referential</string>
    <string name="download_ref_dialog_content">Are you sure you want to download Referential : %s</string>

    <string name="audit_auditor">Name and Surname : *</string>
    <string name="audit_expertise">Expertise level</string>
    <string name="novice">NOVICE</string>
...
