...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <SearchView
            android:id="@+id/auditorNameET"
            android:layout_width="@dimen/search_view_width"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_name"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@id/addAuditor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auditorTV" />

        <ImageView
            android:id="@+id/addAuditor"
            android:layout_width="wrap_content"
...
