...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <SearchView
            android:id="@+id/siteNameET"
            android:layout_width="@dimen/search_view_width"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_name"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@id/addSite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_site_tv" />

        <ImageView
            android:id="@+id/addSite"
            android:layout_width="wrap_content"
...
